Suppress warnings from recent javac versions
Unchecked warnings at VarHandle invocations appear to be new in javac 24.

Various deprecation warnings not seen with --release 9 may not be
brand new with javac 24 but simply left unaddressed earlier. Use the
recommended alternatives where possible for PL/Java 1.6 (available in
Java 9, and no behavior change), or add @SuppressWarnings and a comment
where the alternative can't be used until a major PL/Java rev (because
it could change behavior subtly, or break Java 9 source compatibility).